# country-code-api

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: clients.py  database.py
app/models/: city.py
app/schemas/: city.py
data/ref/: ref.csv
scripts/: load_data.py  spark_job.py
