[project]
name = "country-code-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Arman Salehi",email = "armansalehi33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pyspark (>=4.1.2,<5.0.0)",
    "minio (>=7.2.20,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "runflare"
url = "https://mirror-pypi.runflare.com/simple"
priority = "primary"